--- a/green.html
+++ b/green.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1 style="color: #0C0">The Green Page</h1>
-  <p><span style="color: #0C0">Green</span> is the color of earth.</p>
+  <p><span style="color: #0C0">Green</span> is the color of tree.</p>
     
   <p><a href="index.html">Return to home page</a></p>
 </body>
