--- a/green.html
+++ b/green.html
@@ -6,8 +6,8 @@
   <meta charset="utf-8" />
 </head>
 <body>
-  <h1 style="color: #0C0">The Green Page</h1>
-  <p><span style="color: #0C0">Green</span> is the color of tree.</p>
+  <h1 style="color: #0D5">The Green Page</h1>
+  <p><span style="color: #0D5">Green</span> is the color of tree.</p>
     
   <p><a href="index.html">Return to home page</a></p>
 </body>
